--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio | Spoorthi</title>
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
@@ -170,11 +170,7 @@
                     <a href="https://spoorthisunitha589@gmail.com">mail id</a>
                 </div>
 
-                <div class="contact-item">
-                    <i class="fas fa-phone"></i>
-                    <h3 class="lang-contact-phone">Phone</h3>
-                    <a href="#">+91-8951458105</a>
-                </div>
+               
             </div>
         </section>
     </main>
